--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.4.0",
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "chai": "^4.5.0",
     "ethers": "^6.15.0",
     "hardhat": "^2.26.3"
