--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "chai": "^4.5.0",
     "ethers": "^6.15.0",
-    "hardhat": "^2.26.3"
+    "hardhat": "^2.26.3",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.6.0"
   }
 }
